# LPT

./: Cargo.toml  README.md  config.json  filter.txt  zapros.txt
.cargo/: config.toml
src/: config.rs  counter.rs  dataclass.rs  file_io.rs  folders.rs  lib.rs  loader_paths.rs  loader_settings.rs  logo.rs  main.rs  reading.rs  schemes.rs  select_path.rs  system.rs  text.rs  text_validator.rs  threading.rs  threads.rs  writer.rs
src/text/: main.rs  mod.rs  schema.rs  validator_credits.rs
