[package]
name = "urllogpass"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
num_cpus = "1.16.0"
chrono = "0.4.39"
url = "2.5.4"
colored = "3.0.0"
winapi = { version = "0.3", features = ["processthreadsapi", "psapi"] }
rayon = "1.10.0"
memchr = "2.7.4"
smallvec = "1.13.2"
mimalloc = { version = "0.1", default-features = false }
maplit = "1.0"
indicatif = "0.17.11"
walkdir = "2.5.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
overflow-checks = false
debug = false
strip = true
