[package]
name = "lpt"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
num_cpus = "1.16.0"
chrono = "0.4.40"
colored = "3.0.0"
winapi = { version = "0.3", features = ["processthreadsapi", "psapi"] }
rayon = "1.10.0"
memchr = "2.7.4"
smallvec = "1.14.0"
mimalloc = { version = "0.1", default-features = false }
indicatif = "0.17.11"
walkdir = "2.5.0"
reader_vlf = { git = "https://github.com/BigBrainsClub/RVLF" }
vulp = { git = "https://github.com/BigBrainsClub/VULP" }
big_brains_club_logo = { git = "https://github.com/BigBrainsClub/Big_brains_club_logo" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
overflow-checks = false
debug = false
strip = true
