[package]
name = "lpt"
version = "1.1.5"
authors = ["BigBrainsClub <90547216+bigbrainsclub@users.noreply.github.com>"]
description = "Программное обеспечение для работы с файлами ULP"
license = "BSD-2-Clause"
repository = "https://github.com/BigBrainsClub/LPT"
categories = ["file-parsing", "data-processing", "cli-tool"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
# Сериализация
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"

# Параллелизм
rayon = "1.10.0"
num_cpus = "1.16.0"

# Работа с датами
chrono = { version = "0.4.40", features = ["serde"] }

# Интерфейс
colored = "3.0.0"
indicatif = "0.17.11"
big_brains_club_logo = { git = "https://github.com/BigBrainsClub/Big_brains_club_logo", branch = "testing" }

# Оптимизации
memchr = "2.7.4"
smallvec = "1.14.0"
mimalloc = { version = "0.1.43", default-features = false }

# Системные API
winapi = { version = "0.3", features = ["processthreadsapi", "psapi"] }

# Обработка файлов
walkdir = "2.5.0"
reader_vlf = { git = "https://github.com/BigBrainsClub/RVLF" }
vulp = { git = "https://github.com/BigBrainsClub/VULP" }
aho-corasick = "1.1.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
overflow-checks = false
strip = true
debug = false
incremental = false
